fix Tribo holes filled in black on Firefox

--- a/plugins/ludogene/scss/ludo.scss
+++ b/plugins/ludogene/scss/ludo.scss
@@ -1,3 +1,3 @@
 .ludo-tribo-board-bg {
-	background: #4d8080;
+	background-color: #4d8080;
 }
